# Grouped_GEMM_gpu_kernel

./: CMakeLists.txt  README.md  README_TESTING.md  taskbook_answer.md  taskbook_grouped_gemm.md
bench/: benchmark_grouped_gemm.cu
bench/results_20260331/: results.csv  run_summary.csv  scenario_summary.csv
docs/: benchmark_full_report.md  design.md  grouped_gemm_summary.md
include/grouped_gemm/: grouped_gemm.cuh
src/: grouped_gemm.cu
tests/: test_correctness.cu
